Fix the padding on small screens

--- a/src/RX.Nyss.Web/ClientApp/src/components/headManagerConsents/HeadManagerConsentsPage.module.scss
+++ b/src/RX.Nyss.Web/ClientApp/src/components/headManagerConsents/HeadManagerConsentsPage.module.scss
@@ -39,8 +39,8 @@
     margin: 20px 0;
   }
 
-  @media screen and (min-width: 1280px) {
-    padding: 50px 160px;
+  @media screen and (max-width: 1280px) {
+    padding: unset;
   }
 }
 
